编译打包输出结果中包含公司信息,不使用zgc,因为在windows低于1803的版本中无法使用ZGC